<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <include layout="@layout/view_toolbar"
             android:id="@+id/toolbar"/>
    <ImageView
        android:id="@+id/id_iv_1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar"
        android:src="@drawable/student"/>
    <!--账号输入和密码输入框-->
    <RelativeLayout
        android:id="@+id/id_rtl_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/id_iv_1"
        android:background="#ffffff">
        <RelativeLayout
            android:id="@+id/id_rtl_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/et_bg">
            <EditText
                android:id="@+id/id_et_firstPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:hint="@string/set_password"
                android:textSize="18dp"
                android:textColorHint="#aaaaaa"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/color_cursor"
                android:background="@null"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/id_rtl_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@id/id_rtl_2"
            android:background="@drawable/et_bg">
            <EditText
                android:id="@+id/id_et_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:hint="@string/confirm_password"
                android:textSize="18dp"
                android:textColorHint="#aaaaaa"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/color_cursor"
                android:background="@null"/>
        </RelativeLayout>
    </RelativeLayout>
    <!--注册按钮-->
    <Button
        android:id="@+id/id_bt_register"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_below="@id/id_rtl_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bt_bg_white"
        android:textColor="#ffffff"
        android:text="@string/signUp"
        android:textSize="17dp"
        android:enabled="false"/>
    <LinearLayout
        android:id="@+id/id_ll_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/id_bt_register">
        <!--同意复选框-->
        <CheckBox
            android:id="@+id/id_cb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            style="@style/CustomCheckboxTheme"
            android:checked="true"/>
        <TextView
            android:id="@+id/id_tv_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/tvAgree"/>
        <!--条款信息介绍-->
        <TextView
            android:id="@+id/id_tv_ruleinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#1874CD"
            android:text="@string/tvRule"
            android:textSize="12dp" />
    </LinearLayout>
    <!--已有账号登录-->
    <TextView
        android:id="@+id/id_tv_exitUser_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="#1874CD"
        android:text="@string/exitUser_login"
        android:textSize="15dp" />

</RelativeLayout>