<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">
    <!--android:fitsSystemWindows="true"
    在5.0的系统中设置该属性时,出现了顶部状态栏白屏化的现象
    因此该属性最好不要在非DrawerLayout布局中使用-->

    <include layout="@layout/view_toolbar"
             android:id="@+id/toolbar"/>
    <ImageView
        android:id="@+id/id_iv_1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar"
        android:src="@drawable/student"/>
    <!--账号输入和密码输入框-->
    <RelativeLayout
        android:id="@+id/id_rtl_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/id_iv_1"
        android:background="#ffffff">
        <RelativeLayout
            android:id="@+id/id_rtl_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/et_bg">
            <EditText
                android:id="@+id/id_et_AccName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:hint="@string/phone"
                android:textSize="18dp"
                android:textColorHint="#aaaaaa"
                android:inputType="phone"
                android:textCursorDrawable="@drawable/color_cursor"
                android:background="@null"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/id_rtl_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@id/id_rtl_2"
            android:background="@drawable/et_bg">
            <EditText
                android:id="@+id/id_et_AccPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:hint="@string/password"
                android:textSize="18dp"
                android:textColorHint="#aaaaaa"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/color_cursor"
                android:background="@null"/>
        </RelativeLayout>
    </RelativeLayout>
    <!--登陆按钮-->
    <Button
        android:id="@+id/id_bt_login"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_below="@id/id_rtl_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/bt_bg_white"
        android:textColor="#ffffff"
        android:enabled="false"
        android:text="@string/login"
        android:textSize="17dp"/>
    <!--忘记密码入口-->
    <TextView
        android:id="@+id/id_tv_forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="#1874CD"
        android:text="@string/forget_password"
        android:textSize="15dp" />
    <!--新用户入口-->
    <TextView
        android:id="@+id/id_tv_newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="#1874CD"
        android:text="@string/new_user_signUp"
        android:textSize="15dp" />
</RelativeLayout>